delete unnecessary lines

--- a/docs/articles/coding/CS144.md
+++ b/docs/articles/coding/CS144.md
@@ -1,5 +1,5 @@
 # 介绍
-我学的版本是[Fall 2021](https://cs144.github.io/)  
+[CS144 Fall 2021](https://cs144.github.io/)  
 
 ~~Lab是用C++写的，如果没学过C++但是有Java基础，可以看下https://www.cprogramming.com/tutorial/java/syntax-differences-java-c++.html~~
 C++和Java的区别不是只有那么一点，我写不动了，等有空学官方建议的前置C++课程再来。  
