--- a/docs/articles/coding/CS144.md
+++ b/docs/articles/coding/CS144.md
@@ -5,7 +5,7 @@
 C++和Java的区别不是只有那么一点，我写不动了，等有空学官方建议的前置C++课程再来。  
 
 # 自顶向下方法
-Computer Networking: a Top-Down Approach 写得很好，有很多比喻来帮你理解概念，配套网站有动画演示。这本书没有很多长难句、生词，大部分都是描述性的东西，不需要停下来思考很久，一天看二三十页真不难，整本书也就700来页，能够帮助你很好地建立阅读英文专业书的信心。  
+Computer Networking: A Top-Down Approach 写得很好，有很多比喻来帮你理解概念，配套网站有动画演示。这本书没有很多长难句、生词，大部分都是描述性的东西，不需要停下来思考很久，一天看二三十页真不难，整本书也就700来页，能够帮助你很好地建立阅读英文专业书的信心。  
 配套网站的练习是Python的，没有答案，建议写Java版本的，有答案：
 http://gaia.cs.umass.edu/kurose_ross/programming/  
 
